# dependency-grapher

./: .gitignore  README.md  dependency-graph.pdf-native  pyproject.toml
examples/: A.csproj  B.csproj
examples-nested/libs/Core/: Core.csproj
examples-nested/src/App/: App.csproj
src/dependency_grapher/: __init__.py  builder.py  cli.py  models.py  scanner.py
src/dependency_grapher/exporters/: __init__.py  base.py  dot.py  json_exporter.py  pdf.py  pdf_native.py  registry.py
