[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dependency-grapher"
version = "0.1.0"
description = "Generate dependency graphs from .csproj files"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dependency Grapher" }]
dependencies = [
	"matplotlib>=3.8",
]

[project.scripts]
dependency-grapher = "dependency_grapher.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
